[WIP] dinamically update from xml

--- a/modules/development_tools/static/description/index.html
+++ b/modules/development_tools/static/description/index.html
@@ -104,6 +104,26 @@
 </section>
 <section class="oe_container oe_dark">
     <div class="oe_row oe_spaced">
+        <h2 class="oe_slogan">Dynamic reloading of resources and views</h2>
+        <div class="oe_span6">
+            <div class="oe_row_img oe_centered">
+                <img class="oe_picture oe_screenshot" src="reload-xml.jpg">
+            </div>
+        </div>
+        <div class="oe_span6">
+            <p class="oe_mt32">
+                You will dinamically reload existing views from modified module
+                XML data files.
+            </p>
+            <p>
+                You can also reload any other existing resource from original
+                XML data files.
+            </p>
+        </div>
+    </div>
+</section>
+<section class="oe_container oe_dark">
+    <div class="oe_row oe_spaced">
         <h2 class="oe_slogan">Pivot tables with groups information</h2>
         <h3 class="oe_slogan">Relationships between groups, users and access rights</h3>
         <p class="oe_mt32">
